got Hugo site working for Maximum Ethics
Closes issue #4:
https://github.com/maximum-ethics/linode-caddy/issues/4

We don't currently clone the theme anywhere on the server,
if we do in the future we'll need to uncomment that.
We also don't run Hugo on the server right now, we just clone the
content repo.

--- a/roles/sunrise/handlers/main.yml
+++ b/roles/sunrise/handlers/main.yml
@@ -43,10 +43,7 @@
     state: present
   listen: restart caddy
 
-# TODO: this handler runs twice if both theme and config changed
-# should only run once
-# https://github.com/sunrisemovement/devops/issues/11
-- name: run Hugo if theme changed
+- name: run Hugo if content changed
   command: hugo
   become: yes
   become_user: '{{ web_server_user }}'
@@ -54,13 +51,3 @@
     chdir: /srv/{{ item.item.domain }}/{{ item.item.subdomain }}
   loop: '{{ theme_changes.results }}'
   when: item.changed
-  # listen: re-generate Hugo site
-- name: run Hugo if config changed
-  command: hugo
-  become: yes
-  become_user: '{{ web_server_user }}'
-  args:
-    chdir: /srv/{{ item.item.domain }}/{{ item.item.subdomain }}
-  loop: '{{ config_changes.results }}'
-  when: item.changed
-  # listen: re-generate Hugo site
