--- a/roles/sunrise/vars/Archlinux.yml
+++ b/roles/sunrise/vars/Archlinux.yml
@@ -15,7 +15,7 @@ aur_packages:
 sudoing_group: wheel
 web_server_user: caddy
 
-local_tls: true
+local_tls: false
 # caddy_conf_autosave_dir: /srv/http/.config/caddy
 
 # https://stackoverflow.com/questions/17570658/how-to-find-my-php-fpm-sock
