browse directories, list blog posts by date
Hugo can't automatically create index files for date permalink folders,
but Caddy can list pages for you if you use the "browse" directive:
https://caddyserver.com/docs/caddyfile/directives/file_server

--- a/roles/sunrise/tasks/hugo.yml
+++ b/roles/sunrise/tasks/hugo.yml
@@ -21,6 +21,7 @@
   git:
     repo: '{{ item.content_repo }}'
     dest: /srv/{{ item.domain }}/{{ item.subdomain }}
+    # force: yes
   become: yes
   become_user: '{{ web_server_user }}'
   loop: '{{ hugo_sites }}'
