update Caddyfile format, test RI site, permissions
The RI site appears to be running fine with local certs on america,
we should be able to point the domain at america now and use public
certs.

PHP wasn't working because the caddy user and the PHP user "http" were
different, so Caddy didn't have permissions to interact with PHP. We
fixed this by adding the caddy user to the http group.

Another bug that we solved manually was the Caddy service is not being
restarted after the binary is updated. We still need to trigger a
restart when the package manager updates Caddy in this role.

--- a/roles/sunrise/tasks/caddy.yml
+++ b/roles/sunrise/tasks/caddy.yml
@@ -13,6 +13,18 @@
     - daemon-reload restart caddy
   tags: caddy_service
 
+# https://docs.ansible.com/ansible/latest/collections/ansible/builtin/user_module.html
+# We need Caddy to have permissions to interact with PHP
+- name: Add web_server_user to http group
+  user:
+    name: '{{ web_server_user }}'
+    groups: http
+    append: yes
+  when:
+    - ansible_os_family == 'Archlinux'
+# Can't just make them the same user because the http user's home directory is
+# protected in some annoying way, so Caddy can't keep stuff there.
+
 - name: save info about web server user (including home dir)
   user:
     name: '{{ web_server_user }}'
