switch america to "production" Caddyfile
We were using local TLS to test, it works, so let's make the RI site
live on america.

--- a/update_upgrade.yml
+++ b/update_upgrade.yml
@@ -14,7 +14,7 @@
       update_cache: yes
       cache_valid_time: 3600
       upgrade: safe
-    when: ansible_os_family == 'Debian' # or ansible_os_family == 'Pop!_OS'
+    when: ansible_os_family == 'Debian'
 
   - name: Run the equivalent of "pacman -Syu", updating sources and packages
     pacman:
