--- a/roles/sunrise/vars/Archlinux.yml
+++ b/roles/sunrise/vars/Archlinux.yml
@@ -16,7 +16,7 @@ sudoing_group: wheel
 web_server_user: caddy
 
 # Set this to true to use the vars in local_tls.yml
-local_tls: true
+local_tls: false
 # caddy_conf_autosave_dir: /srv/http/.config/caddy
 
 # https://stackoverflow.com/questions/17570658/how-to-find-my-php-fpm-sock
