make roles work on Ubuntu again
I spun up a test server using Ubuntu, and I think I've fixed most of the
resulting bugs. We should be able to merge back to the "master" branch
now.

I think Apache2 being installed by default on Ubuntu may interfere with
Caddy, uninstall it. Maybe switch to a distro that doesn't install it by
default?

Our Caddy service file didn't work on Ubuntu, probably because I
enabled too many security features. Since I didn't understand the
security features I had enabled well enough to troubleshoot them, I
reverted to Caddy's default service file.

Turns out Hugo modules don't work without Go installed.

I'm no longer sure how to make public HTTPS pages on the test server.

--- a/roles/new-linode_create/tasks/main.yml
+++ b/roles/new-linode_create/tasks/main.yml
@@ -51,6 +51,7 @@
   # https://pypi.org/project/linode-api4/
   pip:
     name: linode_api4
+    state: latest
 - name: Ensure linode is running (create if missing)
   # linode_v4 Ansible module documentation:
   # https://docs.ansible.com/ansible/latest/modules/linode_v4_module.html
