--- a/roles/sunrise/tasks/caddy.yml
+++ b/roles/sunrise/tasks/caddy.yml
@@ -68,10 +68,17 @@
   notify:
     - restart caddy
 
+- name: create Caddyfile config directory
+  file:
+    path: '{{ caddyfile_dir }}'
+    state: directory
+    owner: '{{ web_server_user }}'
+    group: '{{ web_server_user }}'
+    mode: '0755'
 - name: install Caddyfile from template
   template:
     src: '{{ caddyfile_name }}'
-    dest: /etc/caddy/Caddyfile
+    dest: '{{ caddyfile_dir }}/Caddyfile'
     owner: root
     group: root
     mode: '0644'
@@ -98,14 +105,18 @@
     - reload caddy
   tags: test_website
 
-- name: add Caddy deb repository
-  apt_repository: # https://caddyserver.com/docs/install#debian-ubuntu-raspbian
-    # we are disabling signature verification temporarily, which is not secure:
-    # https://news.ycombinator.com/item?id=23074727
-    # TODO: fix this when a better solution is available
-    repo: deb [trusted=yes] https://apt.fury.io/caddy/ /
-    filename: caddy-fury
+# https://caddyserver.com/docs/install#debian-ubuntu-raspbian
+- name: Add Caddy apt key
+  apt_key:
+    url: https://dl.cloudsmith.io/public/caddy/stable/cfg/gpg/gpg.155B6D79CA56EA34.key
+    state: present
   when: # list of conditions = AND
+    - not building_caddy
+    - ansible_os_family == 'Debian'
+- name: add Caddy deb repository
+  apt_repository:
+    repo: deb https://dl.cloudsmith.io/public/caddy/stable/deb/debian any-version main
+  when:
     - not building_caddy
     - ansible_os_family == 'Debian'
 - name: install Caddy from apt
