add exa and fd packages to Ubuntu
Annoyingly, since bat is "batcat" and fd is "fdfind" on Ubuntu,
I'd probably have to alias them to use them consistently across OSes.

--- a/roles/sunrise/vars/Ubuntu.yml
+++ b/roles/sunrise/vars/Ubuntu.yml
@@ -1,5 +1,6 @@
 os_packages:
   - golang # needed to build Caddy from source or use Hugo modules
+  - fd-find # find alternative
 
 uninstall_packages:
   - apache2 # we're using Caddy instead
