try to fix Hugo problems
Try clearing out unused files after each build, to make things less
confusing.

Check permissions to try to eliminate those as a source of issues.

--- a/roles/sunrise/handlers/main.yml
+++ b/roles/sunrise/handlers/main.yml
@@ -44,7 +44,7 @@
   listen: restart caddy
 
 - name: run Hugo if content changed
-  command: hugo
+  command: hugo --cleanDestinationDir
   become: yes
   become_user: '{{ web_server_user }}'
   args:
