--- a/roles/sunrise/vars/main.yml
+++ b/roles/sunrise/vars/main.yml
@@ -44,7 +44,7 @@ handcoded_websites:
     domain_name: sunrisepvd.com
     git_repo: https://github.com/sunriseprovidence/sunrisepvd.com.git
 
-hugo_deb_url: https://github.com/gohugoio/hugo/releases/download/v0.83.1/hugo_extended_0.83.1_Linux-64bit.deb
+hugo_deb_url: https://github.com/gohugoio/hugo/releases/download/v0.84.0/hugo_0.84.0_Linux-64bit.deb
 hugo_sites:
   - title: Maximum Ethics
     domain: maximumethics.dev
