--- a/roles/sunrise/vars/Ubuntu.yml
+++ b/roles/sunrise/vars/Ubuntu.yml
@@ -1,6 +1,7 @@
 os_packages:
   - golang # needed to build Caddy from source or use Hugo modules
   - fd-find # find alternative
+  - zoxide # navigate filesystem faster
 
 uninstall_packages:
   - apache2 # we're using Caddy instead
