--- a/roles/sunrise/vars/main.yml
+++ b/roles/sunrise/vars/main.yml
@@ -9,6 +9,7 @@ common_packages:
   - acl # allows becoming unprivileged user (for git clone)
   - micro # terminal-based text editor
   - tldr # use until tealdeer is available
+  - neofetch # show OS details
 
 default_pass: "$6$mysecretsalt$KX2mLFmN1x9gF/urPk7EpzaMJMcY4yoFetMlQw0W9Lm2MJZ8cVI/7dk25PVyb6cLx7IUwTxON5HucMHOdsP.Y0"
 admin_email: skyfaller@gmail.com
