put new servers in "new" hosts group
new-linode.yml currently cannot run on established servers that don't
use the default credentials. So we don't want to wait around for those
established servers to time out. Instead we only want to run the
server creation tasks on just-created servers. So let's create a "new"
group to hold them.

--- a/new-linode.yml
+++ b/new-linode.yml
@@ -7,13 +7,13 @@
   roles:
     - new-linode_create
 
-- hosts: maxethics
+- hosts: new
   gather_facts: no
 
   roles:
     - new-linode_initiate-users
 
-- hosts: maxethics
+- hosts: new
   become: yes
 
   roles:
