defaults: initial commit
We should move variables that aren't specific to our setup into
defaults. In other words, if someone wanted to use our code to run
their own infrastructure, the default variables are ones they probably
wouldn't need to change.

Main continues to hold variables that are specific to our websites but
not specific to an operating system, while OS-specific variables live
in their respective vars files.

--- a/roles/sunrise/defaults/main.yml
+++ b/roles/sunrise/defaults/main.yml
@@ -1,2 +1,9 @@
 # Set this to true to use the vars in local_tls.yml
 local_tls: true
+sudoing_group: wheel
+
+# vars for caddy.yml
+caddy_storage_dir: '{{ webserver_user_registered.home }}/.local/share/caddy'
+caddy_conf_autosave_dir: '{{ webserver_user_registered.home }}/.config/caddy'
+caddyfile_dir: /etc/caddy
+caddy_binary_location: /usr/bin/caddy
