tip: switch to Linode's latest kernel
Switching to Linode's latest kernel allows Arch Linux to set up ufw
without a hitch. I suspect that Arch's slightly newer kernel is just
a little too bleeding edge. Alternately, perhaps Linode's kernel
integrates with their hardware/environment better somehow?

It's also a good idea on more stable distros to improve security.

--- a/roles/new-linode_harden/tasks/main.yml
+++ b/roles/new-linode_harden/tasks/main.yml
@@ -14,3 +14,5 @@
 # TODO: make sure handlers execute in the correct order, by e.g. calling the 2nd handler from the first handler
 # don't rely on the order in which handlers are written down, which seems fragile
 # https://github.com/sunrisemovement/devops/issues/7
+
+# Also, consider switching to Linode's latest kernel to improve security.
