tip: manually edit /etc/hosts to fix ssh to host
I hope no one else encounters this problem, I never saw it before I
started coding on my old Macbook Pro. But if they do, I would really
appreciate it if they could help me track down the cause of this
mysterious bug. Why would ssh refuse to connect to a hostname in
/etc/hosts when ping will?

--- a/roles/new-linode_initiate-users/tasks/main.yml
+++ b/roles/new-linode_initiate-users/tasks/main.yml
@@ -6,6 +6,10 @@
   wait_for_connection:
     delay: 10
     timeout: 90
+# If the role fails here, and you can ping the hostname but not ssh to it,
+# try making a meaningless edit to your local /etc/hosts, or overwriting it
+# with no change using e.g. sudo nano /etc/hosts with ctrl+O. I don't know why
+# that would fix anything, but it does on my old Macbook Pro.
 - name: Gather facts for first time
   setup:
 
